Bug 1197497 - Convert the button rect to device coordinates correctly instead of casting CSS coordinates. r=jfkthame

MozReview-Commit-ID: EqyHnJpp2tU